<resources>
    <string name="app_name">Whatsapp-Design</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="contacts">Contacts</string>
    <string name="make_a_chat_with_contacts">make a chat with contacts</string>
    <string name="community_section">Community section</string>
    <string name="search_about_something">Search About something</string>
    <string name="indicate_the_selected_screen">shows options of existing screens</string>
    <string name="calls">Calls</string>
    <string name="search">Search</string>
    <string name="camera">Camera</string>
    <string name="new_group">New Group</string>
    <string name="settings">Settings</string>
    <string name="linked_devices">Linked Devices</string>
    <string name="new_broadcast">New Broadcast</string>
    <string name="starred_messages">Starred messages</string>
    <string name="yapping">خلافاَ للإعتقاد السائد فإن لوريم إيبسوم ليس نصاَ عشوائياً، بل إن له جذور في الأدب اللاتيني الكلاسيكي منذ العام 45 قبل الميلاد، مما يجعله أكثر من 2000 عام في القدم. قام البروفيسور ريتشارد ماك لينتوك (Richard McClintock) وهو بروفيسور اللغة اللاتينية في جامعة هامبدن-سيدني في فيرجينيا بالبحث عن أصول كلمة لاتينية غامضة في نص لوريم إيبسوم وهي consectetur، وخلال تتبعه لهذه الكلمة في الأدب اللاتيني اكتشف المصدر الغير قابل للشك. فلقد اتضح أن كلمات نص لوريم إيبسوم تأتي من الأقسام 1.10.32 و 1.10.33 من كتاب حول أقاصي الخير والشر (de Finibus Bonorum et Malorum) للمفكر شيشيرون (Cicero) والذي كتبه في عام 45 قبل الميلاد. هذا الكتاب هو بمثابة مقالة علمية مطولة في نظرية الأخلاق، وكان له شعبية كبيرة في عصر النهضة. السطر الأول من لوريم إيبسوم Lorem ipsum dolor sit amet.. يأتي من سطر في القسم 1.20.32 من هذا الكتاب.</string>
    <string name="make_a_voice_call" translatable="false">make a voice call</string>
    <string name="type_of_call_record" translatable="false">type of call record</string>
</resources>